--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
 
     <!-- Link to external JavaScript functionality -->
     <script src="script.js"></script>
+    
+    <!-- Included a How-To page to conform with the project brief -->
+    <footer class="footer">
+    <a href="how-to.html">How to Play / Accessibility Info</a>
+    </footer>
 </body>
 </html>
