--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
     <!-- Included a How-To page to conform with the project brief -->
     <footer class="footer">
     <a href="how-to.html">How to Play / Accessibility Info</a>
+    <p>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px"
+                src="https://jigsaw.w3.org/css-validator/images/vcss"
+                alt="Valid CSS!" />
+        </a>
+    </p>
     </footer>
 </body>
 </html>
