--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev Project</title>
     <!-- Link to external CSS for styling -->
-    <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Main container for the quiz app -->
