--- a/how-to.html
+++ b/how-to.html
@@ -52,7 +52,7 @@
 
         <h2>⌨️ Keyboard Navigation</h2>
         <p>You can use the <strong>Tab</strong> key to move between buttons and <strong>Enter</strong> to select an answer.</p>
-        <img src="images/keyboard-accessibility.png" alt="Keyboard accessibility example">
+        <img src="images/keyboard-accessibility.jpg" alt="Keyboard accessibility example">
 
         <h2>🦻 Accessibility Options</h2>
         <ul>
