--- a/how-to.html
+++ b/how-to.html
@@ -60,8 +60,8 @@
             <li>High contrast color scheme for better visibility.</li>
             <li>Large, clickable buttons for easy interaction.</li>
         </ul>
-        <img src="images/high-contrast-example.png" alt="High contrast design for accessibility">
-
+        <!-- img src="images/high-contrast-example.png" alt="High contrast design for accessibility"> -->
+        <img src="https://raw.githubusercontent.com/IvanTanner-dev/CodeAcademy-Project-1/main/images/keyboard-accessibility.jpg" alt="High contrast design for accessibility">
         <a href="index.html" class="back-link">← Back to Quiz</a>
     </div>
 </body>
