--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
     <footer class="footer">
     <a href="how-to.html">How to Play / Accessibility Info</a>
     <p>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer">
-        <img style="border:0;width:88px;height:31px"
-            src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
-            alt="Valid CSS!" />
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://ivantanner-dev.github.io/CodeAcademy-Project-1/">
+    <img src="https://jigsaw.w3.org/css-validator/images/vcss-blue" 
+       alt="Valid CSS!" 
+       style="border:0;width:88px;height:31px" />
     </a>
     </p>
     </footer>
 </body>
 </html>
+
 
